--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.20",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "node-sass": "^7.0.1",
+    "node-scss": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass-loader": "^12.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
